# Idle-Game

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: pages.yml
design/: idle_civ_design.md
design/data/: buildings.json
electron/: main.js
src/: idle_cli.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tools/: generate_buildings.py  package_web.py  run_python.cjs  serve_static.cjs
web/: index.html  main.js  resource-ui.css  resource-ui.js  styles.css
web/assets/: game-core.js  main.js  sim-worker.js
web/data/: buildings.json  systems.json
web/src/: game-core.ts  main.ts  sim-worker.ts
