[package]
name = "idle-civilization"
version = "0.5.0"
description = "Idle Civilization"
authors = ["Idle Civilization"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "idle_civilization_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
